# Body-Sounds

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.agent/workflows/: pypi-deploy.md
body_sound_detection/: __init__.py  cli.py
body_sound_detection/classification/: __init__.py  classifier.py  model_loader.py
body_sound_detection/report_generator/: report_generator.py
body_sound_detection/reports/: report.json
body_sound_detection/signal_processing/: preprocessing.py
combined/: config.py
combined/agent/: agent.py
combined/classification/: __init__.py  classifier.py  model_loader.py
combined/experiment_app_files/: classify+preprocess.py  classify_app.py  main_old.py
combined/signal_processing/: __init__.py  analyzer.py  features.py  loader.py  visualizer.py
combined/utils/: __init__.py  printer.py
heart_murmur_analysis/: __init__.py  cli.py
heart_murmur_analysis/classification/: classifier.py  model_loader.py
reports/: bowel_report.json  heartbeat_report.json  lung_report.json
