[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "body-sound-detection"
version = "0.4.5"
description = "AI-powered body sound analysis platform for heart, lung, and bowel sound detection."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aanand", email = "aanan@example.com"}
]
dependencies = [
    "streamlit",
    "python-docx",
    "numpy<2.0,>=1.26.0",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "tensorflow>=2.16.1",
    "tf-keras",
    "librosa>=0.11.0",
    "numba>=0.58.0",
    "soundfile",
    "python-dotenv",
    "pydantic",
    "langchain-groq",
    "langchain",
    "langchain-community",
    "langchain_google_genai",
    "langchain-text-splitters",
    "chromadb",
    "faiss-cpu",
    "openpyxl",
    "langchain-core",
    "langchain-huggingface",
    "langgraph",
    "sentence-transformers",
    "nest-asyncio",
    "huggingface-hub",
    "llvmlite>=0.41.0"
]

[project.scripts]
body-sound-app = "body_sound_detection.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["body_sound_detection"]

[tool.hatch.build.targets.sdist]
include = [
    "body_sound_detection",
    "README.md",
]

[tool.hatch.build]
artifacts = [
    "body_sound_detection/models/*.h5"
]
